--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto: create-drop
 spring.jpa.hibernate.naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.database: H2
 spring.jpa.show-sql: true
+
+spring.thymeleaf.cache: false
