bugfix security filtering

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.jpa.database: H2
 spring.jpa.show-sql: true
 
 spring.thymeleaf.cache: false
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate=ERROR
