update docker-compose file2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,16 @@
-wp:
-  image: oskarhane/wordpress
-links:
-  - mysql:mysql
-ports:
-  - "80"
-volumes_from:
-  - paasdata
-
-mysql:
-    image: mysql
-    volumes_from:
-    - paasdata
-    environment:
-    - MYSQL_ROOT_PASSWORD=myrootpass
-
-paasdata:
-    image: oskarhane/data
-    command: tail -f /dev/null
+fredbet:
+  image: fred4jupiter/fredbet
+  links:
+    - mongodb:mongodb
+  ports:
+    - "80:8080"
+ 
+mongodb:
+  image: dockerfile/mongodb
+  volumes:
+  - /var/lib/mongodb:/data/db 
+  ports:
+  - "28017:28017"
+  expose:
+  - "27017"
+  - "28017"
