--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ fredbet:
     - "80:8080"
  
 mongodb:
-  image: dockerfile/mongodb
+  image: mongo
   volumes:
   - /var/lib/mongodb:/data/db 
   ports:
