--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,29 @@
-fredbet:
-  image: fred4jupiter/fredbet
-  links:
-    - mongodb:mongodb
+dockerui:
+  image: dockerui/dockerui
+  privileged: true
   ports:
-    - "80:8080"
- 
+  - "9000:9000"
+  volumes:
+  - /var/run/docker.sock:/var/run/docker.sock
+
 mongodb:
   image: mongo
+  command: "mongod --smallfiles"
   volumes:
   - /var/lib/mongodb:/data/db 
   ports:
+  - "27017:27017"
   - "28017:28017"
   expose:
   - "27017"
   - "28017"
+
+fredbet:
+  image: fred4jupiter/fredbet
+  links:
+    - mongodb
+  ports:
+    - "8080:8080"
+  environment:
+   - spring.profiles.active=test
+ 
