moved docker file; added InitialUserPopulator

--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
 				<version>0.3.1</version>
 				<configuration>
 					<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-					<dockerDirectory>src/main/docker</dockerDirectory>
+					<dockerDirectory>${project.basedir}</dockerDirectory>
 					<resources>
 						<resource>
 							<targetPath>/</targetPath>
