--- a/pom.xml
+++ b/pom.xml
@@ -111,8 +111,13 @@
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>0.3.1</version>
 				<configuration>
+					<serverId>dtutum-registry</serverId>
 					<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
 					<dockerDirectory>${project.basedir}</dockerDirectory>
+					<registryUrl>https://tutum.co/fred4jupiter/fredbet</registryUrl>
+					<image>${docker.image.prefix}/${project.artifactId}</image>
+					<!-- <newName>tutum.co/${docker.image.prefix}/${project.artifactId}:${project.version}</newName> -->
+					<newName>tutum.co/${docker.image.prefix}/${project.artifactId}</newName>
 					<resources>
 						<resource>
 							<targetPath>/</targetPath>
