--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,6 @@ spring.thymeleaf.cache=false
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+
+# for actuator
+management.context-path=/manage
