--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,3 +2,6 @@ spring.thymeleaf.cache=true
 
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
+
+# for actuator
+management.context-path=/manage
