--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,6 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.10.4</version>
-		</dependency>
-		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
@@ -112,9 +107,10 @@
 		</dependency>
 	</dependencies>
 
-	<build>		
+	<build>
 		<plugins>
-			<!-- Run mvn clean install spring-boot:run to start on console with spring loaded activated -->
+			<!-- Run mvn clean install spring-boot:run to start on console with spring 
+				loaded activated -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -125,6 +121,22 @@
 						<version>1.2.4.RELEASE</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>pl.project13.maven</groupId>
+				<artifactId>git-commit-id-plugin</artifactId>
+				<version>2.1.15</version>
+				<configuration>
+					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+					<includeOnlyProperties>
+						<includeOnlyProperty>git.commit.time</includeOnlyProperty>
+						<includeOnlyProperty>git.build.version</includeOnlyProperty>
+						<includeOnlyProperty>git.commit.id</includeOnlyProperty>
+						<includeOnlyProperty>git.commit.message.short</includeOnlyProperty>
+						<includeOnlyProperty>git.branch</includeOnlyProperty>
+						<includeOnlyProperty>git.build.time</includeOnlyProperty>
+					</includeOnlyProperties>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>com.spotify</groupId>
@@ -146,7 +158,7 @@
 						</resource>
 					</resources>
 				</configuration>
-			</plugin>			
+			</plugin>
 		</plugins>
 	</build>
 
