--- a/tutum-test.yml
+++ b/tutum-test.yml
@@ -3,9 +3,9 @@ fredbet:
   links:
   - mongodb
   ports:
-  - "8180:8080"
+  - "80:8080"
   environment:
-  - spring.profiles.active=test
+  - spring.profiles.active=test,demodata
 mongodb:
   image: mongo
   volumes:
