--- a/src/docker/test/docker-compose.yml
+++ b/src/docker/test/docker-compose.yml
@@ -1,23 +1,3 @@
-dockerui:
-  image: dockerui/dockerui
-  privileged: true
-  ports:
-  - "9000:9000"
-  volumes:
-  - /var/run/docker.sock:/var/run/docker.sock
-
-mongodb:
-  image: mongo
-  command: "mongod --smallfiles"
-  volumes:
-  - /var/lib/mongodb/fredbet/test:/data/db 
-  ports:
-  - "27017:27017"
-  - "28017:28017"
-  expose:
-  - "27017"
-  - "28017"
-
 fredbet:
   image: fred4jupiter/fredbet
   links:
@@ -25,5 +5,13 @@ fredbet:
   ports:
     - "8180:8080"
   environment:
-   - spring.profiles.active=test
- 
+   - spring.profiles.active=test,demodata
+
+mongodb:
+  image: mongo
+  command: "mongod --smallfiles"
+#  volumes:
+#  - /var/lib/mongodb/fredbet/test:/data/db
+  expose:
+  - "27017"
+  
