--- a/src/docker/development/tutum-dev.yml
+++ b/src/docker/development/tutum-dev.yml
@@ -1,17 +1,15 @@
 fredbet:
   image: 'tutum.co/fred4jupiter/fredbet:latest'
-  links:
-  - mongodb
-  ports:
-  - '80:8080'
-  - '2000:2000'
   environment:
-  - spring.profiles.active=test,demodata
+    - 'spring.profiles.active=test,demodata'
+  links:
+    - mongodb
+  ports:
+    - '80:8080'
+    - '2000:2000'
   target_num_containers: 2
 mongodb:
-  image: mongo
-  command: "mongod --smallfiles"
-  volumes:
-  - /var/lib/mongodb/fredbet/test:/data/db
+  image: 'mongo:latest'
+  command: 'mongod --smallfiles'
   ports:
-  - "27017"
+    - '27017'
