--- a/src/docker/test/docker-compose.yml
+++ b/src/docker/test/docker-compose.yml
@@ -12,6 +12,7 @@ mongodb:
   command: "mongod --smallfiles"
 #  volumes:
 #  - /var/lib/mongodb/fredbet/test:/data/db
+# exposed ports will be visible for linked services only (not the host)
   expose:
   - "27017"
   
