--- a/circle.yml
+++ b/circle.yml
@@ -13,4 +13,4 @@ dependencies:
 test:
   override:
     - docker run -d -p 9200:8080 fred4jupiter/fredbet; sleep 10
-    - curl --retry 10 --retry-delay 5 -v http://localhost:9200
+    - curl --retry 10 --retry-delay 5 -v http://127.0.0.1:9200
