--- a/circle.yml
+++ b/circle.yml
@@ -13,4 +13,12 @@ dependencies:
 test:
   override:
     - docker run -d -p 9200:8080 fred4jupiter/fredbet; sleep 10
-    - curl --retry 10 --retry-delay 5 -v http://127.0.0.1:9200
+#    - curl --retry 10 --retry-delay 5 -v http://127.0.0.1:9200
+
+deployment:
+  tutum:
+    branch: master
+    commands:
+      - docker login --username=$TUTUM_USER --password=$TUTUM_PASS tutum.co
+      - docker tag -f fred4jupiter/fredbet tutum.co/fred4jupiter/fredbet
+      - docker push tutum.co/fred4jupiter/fredbet
