--- a/circle.yml
+++ b/circle.yml
@@ -10,9 +10,9 @@ dependencies:
     - docker info
     - docker build -t fred4jupiter/fredbet .
 
-test:
-  override:
-    - docker run -d -p 9200:8080 fred4jupiter/fredbet; sleep 10
+# test:
+#  override:
+#    - docker run -d -p 9200:8080 fred4jupiter/fredbet; sleep 10
 #    - curl --retry 10 --retry-delay 5 -v http://127.0.0.1:9200
 
 deployment:
