--- a/pom.xml
+++ b/pom.xml
@@ -125,22 +125,22 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<plugin>
-				<groupId>pl.project13.maven</groupId>
-				<artifactId>git-commit-id-plugin</artifactId>
-				<version>2.1.15</version>
-				<configuration>
-					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-					<includeOnlyProperties>
-						<includeOnlyProperty>git.commit.time</includeOnlyProperty>
-						<includeOnlyProperty>git.build.version</includeOnlyProperty>
-						<includeOnlyProperty>git.commit.id</includeOnlyProperty>
-						<includeOnlyProperty>git.commit.message.short</includeOnlyProperty>
-						<includeOnlyProperty>git.branch</includeOnlyProperty>
-						<includeOnlyProperty>git.build.time</includeOnlyProperty>
-					</includeOnlyProperties>
-				</configuration>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>pl.project13.maven</groupId> -->
+<!-- 				<artifactId>git-commit-id-plugin</artifactId> -->
+<!-- 				<version>2.1.15</version> -->
+<!-- 				<configuration> -->
+<!-- 					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory> -->
+<!-- 					<includeOnlyProperties> -->
+<!-- 						<includeOnlyProperty>git.commit.time</includeOnlyProperty> -->
+<!-- 						<includeOnlyProperty>git.build.version</includeOnlyProperty> -->
+<!-- 						<includeOnlyProperty>git.commit.id</includeOnlyProperty> -->
+<!-- 						<includeOnlyProperty>git.commit.message.short</includeOnlyProperty> -->
+<!-- 						<includeOnlyProperty>git.branch</includeOnlyProperty> -->
+<!-- 						<includeOnlyProperty>git.build.time</includeOnlyProperty> -->
+<!-- 					</includeOnlyProperties> -->
+<!-- 				</configuration> -->
+<!-- 			</plugin> -->
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
