--- a/src/main/resources/build.properties
+++ b/src/main/resources/build.properties
@@ -1,5 +1,6 @@
 project.version=${project.version}
-buildTimestamp=${timestamp}
+build.timestamp=${buildtimestamp}
+buildNumber=${buildNumber}
 java.version=${java.version}
 java.vm.vendor=${java.vm.vendor}
 os.name=${os.name}
