changed uri for use with replica set

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,3 @@
 spring.thymeleaf.cache=true
 
-spring.data.mongodb.host=mongodb
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://NLWGM1793:27017,NLWGM1793:28017,NLWGM1793:29017/test
