--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,3 @@
 spring.thymeleaf.cache=true
 
-spring.data.mongodb.uri=mongodb://NLWGM1793:27017,NLWGM1793:28017,NLWGM1793:29017/test
+spring.data.mongodb.uri=mongodb://mongo1:27017,mongo2:27018,mongo3:27019/test
