--- a/src/docker/test/docker-compose.yml
+++ b/src/docker/test/docker-compose.yml
@@ -1,18 +1,57 @@
+mongo1:
+  hostname: mongo1
+  image: mongo:3.0.6
+  entrypoint: [ "/usr/bin/mongod", "--replSet", "rs", "--journal", "--smallfiles", "--rest" ]
+  ports:
+    - "27017:27017"
+    - "28017:28017"
+  links:
+    - mongo2:mongo2
+    - mongo3:mongo3
+  volumes:
+  - /var/lib/mongodb/fredbet/prod/mongo1:/data/db 
+  restart: never
+
+mongo2:
+  hostname: mongo2
+  image: mongo:3.0.6
+  entrypoint: [ "/usr/bin/mongod", "--replSet", "rs", "--journal", "--smallfiles", "--rest" ]
+  ports:
+    - "27018:27017"
+    - "28018:28017"
+  volumes:
+  - /var/lib/mongodb/fredbet/prod/mongo2:/data/db 
+  restart: never
+
+mongo3:
+  hostname: mongo3
+  image: mongo:3.0.6
+  entrypoint: [ "/usr/bin/mongod", "--replSet", "rs", "--journal", "--smallfiles", "--rest" ]
+  ports:
+    - "27019:27017"
+    - "28019:28017"
+  volumes:
+  - /var/lib/mongodb/fredbet/prod/mongo3:/data/db 
+  restart: never
+
+# This configures the MongoDB replicaset
+mongosetup:
+  image: mongo:3.0.6
+  links:
+    - mongo1:mongo1
+    - mongo2:mongo2
+    - mongo3:mongo3
+  volumes:
+    - ./scripts:/scripts
+  entrypoint: [ "/scripts/setup.sh" ]
+
 fredbet:
   image: fred4jupiter/fredbet
   links:
-    - mongodb
+    - mongo1
+    - mongo2
+    - mongo3
   ports:
     - "8180:8080"
   environment:
    - spring.profiles.active=test,demodata
-
-mongodb:
-  image: mongo
-  command: "mongod --smallfiles"
-#  volumes:
-#  - /var/lib/mongodb/fredbet/test:/data/db
-# exposed ports will be visible for linked services only (not the host)
-  expose:
-  - "27017"
-  
