--- a/pom.xml
+++ b/pom.xml
@@ -135,17 +135,17 @@
 		</resources>
 		<plugins>
 			<!-- Run mvn clean install spring-boot:run to start on console with spring loaded activated -->
-			<!-- <plugin> -->
-			<!-- <groupId>org.springframework.boot</groupId> -->
-			<!-- <artifactId>spring-boot-maven-plugin</artifactId> -->
-			<!-- <dependencies> -->
-			<!-- <dependency> -->
-			<!-- <groupId>org.springframework</groupId> -->
-			<!-- <artifactId>springloaded</artifactId> -->
-			<!-- <version>1.2.4.RELEASE</version> -->
-			<!-- </dependency> -->
-			<!-- </dependencies> -->
-			<!-- </plugin> -->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- <dependencies> -->
+				<!-- <dependency> -->
+				<!-- <groupId>org.springframework</groupId> -->
+				<!-- <artifactId>springloaded</artifactId> -->
+				<!-- <version>1.2.4.RELEASE</version> -->
+				<!-- </dependency> -->
+				<!-- </dependencies> -->
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
