bugfix resource filtering

--- a/src/main/resources/build.properties
+++ b/src/main/resources/build.properties
@@ -1,8 +1,8 @@
-project.version=${project.version}
-build.timestamp=${buildtimestamp}
-buildNumber=${buildNumber}
-java.version=${java.version}
-java.vm.vendor=${java.vm.vendor}
-os.name=${os.name}
-os.arch=${os.arch}
-os.version=${os.version}
+project.version=@project.version@
+build.timestamp=@buildtimestamp@
+buildNumber=@buildNumber@
+java.version=@java.version@
+java.vm.vendor=@java.vm.vendor@
+os.name=@os.name@
+os.arch=@os.arch@
+os.version=@os.version@
