--- a/src/docker/test/docker-compose.yml
+++ b/src/docker/test/docker-compose.yml
@@ -41,6 +41,7 @@ mongosetup:
     - mongo1:mongo1
     - mongo2:mongo2
     - mongo3:mongo3
+  restart: never
 
 fredbet:
   image: fred4jupiter/fredbet
