--- a/circle.yml
+++ b/circle.yml
@@ -13,18 +13,18 @@ dependencies:
 test:
   override:
   - mvn verify
-#  - docker build -t fred4jupiter/fredbet .
+  - docker build -t fred4jupiter/fredbet .
 #    - docker run -d -p 9200:8080 fred4jupiter/fredbet; sleep 10
 #    - curl --retry 10 --retry-delay 5 -v http://127.0.0.1:9200
 
 deployment:
-  #tutum:
-  #  branch: master
-  #  commands:
-  #    - docker login --username=$TUTUM_USER --password=$TUTUM_PASS --email=$TUTUM_EMAIL tutum.co
-  #    - docker tag -f fred4jupiter/fredbet tutum.co/fred4jupiter/fredbet
-  #    - docker push tutum.co/fred4jupiter/fredbet
-  staging:
+  tutum:
     branch: master
-    heroku:
-      appname: fredbet
+    commands:
+      - docker login --username=$TUTUM_USER --password=$TUTUM_PASS --email=$TUTUM_EMAIL tutum.co
+      - docker tag -f fred4jupiter/fredbet tutum.co/fred4jupiter/fredbet
+      - docker push tutum.co/fred4jupiter/fredbet
+  #staging:
+  #  branch: master
+  #  heroku:
+  #    appname: fredbet
