--- a/circle.yml
+++ b/circle.yml
@@ -22,5 +22,5 @@ deployment:
     branch: master
     commands:
     - docker login -e $TUTUM_EMAIL -u $TUTUM_USER -p $TUTUM_PASS  tutum.co
-    - docker tag -f fred4jupiter/fredbet:$CIRCLE_BUILD_NUM tutum.co/fred4jupiter/fredbet:$CIRCLE_BUILD_NUM
+    - docker tag -f fred4jupiter/fredbet tutum.co/fred4jupiter/fredbet:$CIRCLE_BUILD_NUM
     - docker push tutum.co/fred4jupiter/fredbet:$CIRCLE_BUILD_NUM
