--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,5 @@
 spring.thymeleaf.cache=true
 
-spring.data.mongodb.uri=mongodb://mongo1:27017,mongo2:27018,mongo3:27019/test
+# use this for mongodb replica set configuration
+# spring.data.mongodb.uri=mongodb://mongo1:27017,mongo2:27018,mongo3:27019/test
+spring.data.mongodb.uri=mongodb://mongodb:27017/test
