--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>fredbet</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
