--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<packaging>jar</packaging>
 
-	<name>Fredbet Tippspiel</name>
+	<name>Fredbet</name>
 
 	<description>Simple football betting application.</description>
 
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.0.RELEASE</version>
+		<version>1.3.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
