--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ dependencies:
 
 test:
   override:
-  - mvn build-helper:parse-version versions:set -DnewVersion=${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${CIRCLE_BUILD_NUM}
+  - /bin/bash -c "mvn build-helper:parse-version versions:set -DnewVersion=${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${CIRCLE_BUILD_NUM}"
   - mvn verify  
   post:  
   - mvn scm:tag -Dbasedir=. -Dtag=release_${project.version}
