--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>de.fred4jupiter.fredbet</groupId>
 	<artifactId>fredbet</artifactId>
-	<version>0.0.1.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
