--- a/circle.yml
+++ b/circle.yml
@@ -13,8 +13,8 @@ dependencies:
 test:
   override:
   - mvn verify  
-  post:    
-  - docker build -t fred4jupiter/fredbet .
+#  post:    
+#  - docker build -t fred4jupiter/fredbet .
 #    - docker run -d -p 9200:8080 fred4jupiter/fredbet; sleep 10
 #    - curl --retry 10 --retry-delay 5 -v http://127.0.0.1:9200
 
@@ -22,6 +22,7 @@ deployment:
   tutum:
     branch: master
     commands:
+    - ./release.sh
     - docker login -e $TUTUM_EMAIL -u $TUTUM_USER -p $TUTUM_PASS  tutum.co
     - docker tag -f fred4jupiter/fredbet tutum.co/fred4jupiter/fredbet:$CIRCLE_BUILD_NUM
     - docker push tutum.co/fred4jupiter/fredbet:$CIRCLE_BUILD_NUM
