--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,3 @@
 spring.thymeleaf.cache=true
 
-spring.data.mongodb.uri=mongodb://mongo1:27017,mongo2:27018,mongo3:27019/prod
+spring.data.mongodb.uri=mongodb://mongo1:27017,mongo2:27018,mongo3:27019/prod?connectTimeoutMS=300000
