--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
@@ -135,17 +140,9 @@
 			</resource>
 		</resources>
 		<plugins>
-			<!-- Run mvn clean install spring-boot:run to start on console with spring loaded activated -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<!-- <dependencies> -->
-				<!-- <dependency> -->
-				<!-- <groupId>org.springframework</groupId> -->
-				<!-- <artifactId>springloaded</artifactId> -->
-				<!-- <version>1.2.4.RELEASE</version> -->
-				<!-- </dependency> -->
-				<!-- </dependencies> -->
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
