using devtools in spring boot plugin

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<!-- configured for using devtools within the spring boot plugin -->
+					<fork>true</fork>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
