--- a/src/docker/tutum/test/tutum-mongodbsingle.yml
+++ b/src/docker/tutum/test/tutum-mongodbsingle.yml
@@ -1,17 +1,17 @@
 fredbet:
   image: 'tutum.co/fred4jupiter/fredbet:80'
   environment:
-    - 'spring.profiles.active=test'
+    - 'spring.profiles.active=mongodbsingle'
   links:
     - mongodb
   ports:
     - '80:8080'
     - '2100:2000'
-  target_num_containers: 2
+  target_num_containers: 1
 mongodb:
   image: 'mongo:latest'
   command: 'mongod --smallfiles'
   ports:
     - '27017'
   volumes:
-  - /var/lib/mongodb/fredbet/test:/data/db  
+  - /var/lib/mongodb/fredbet/mongodbsingle:/data/db  
