--- a/src/main/resources/application-sloppy.properties
+++ b/src/main/resources/application-sloppy.properties
@@ -1,3 +1,3 @@
 spring.thymeleaf.cache=true
 
-spring.data.mongodb.uri=mongodb://mongodb.database.fredbet.hamsterhase:27017/test
+spring.data.mongodb.uri=mongodb://mongodb.database.fredbet.hamsterhase/test
