refactored using relational database instead of mongodb

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,18 @@
 spring.thymeleaf.cache=false
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverclassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.generate-ddl=true
+
+# possible values: none, validate, update, create, create-drop
+spring.jpa.hibernate.ddl-auto=create
+
+spring.h2.console.enabled=true
+
+# connect in console (http://localhost:8080/console) with jdbcUrl: jdbc:h2:mem:testdb
 
 shell.ssh.enabled=false
