--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,6 @@
 spring.thymeleaf.cache=true
 
-spring.data.mongodb.uri=mongodb://mongo1:27017,mongo2:27018,mongo3:27019/prod?connectTimeoutMS=300000
+spring.datasource.url=jdbc:mariadb://localhost:3306/db_wic
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driverclassName=org.mariadb.jdbc.Driver
