--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,6 @@
 spring.thymeleaf.cache=true
 
-# use this for mongodb replica set configuration
-spring.data.mongodb.uri=mongodb://mongo1:27017,mongo2:27018,mongo3:27019/test?connectTimeoutMS=300000
-# spring.data.mongodb.uri=mongodb://mongodb:27017/test
+spring.datasource.url=jdbc:mariadb://localhost:3306/db_wic
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driverclassName=org.mariadb.jdbc.Driver
