--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,11 @@
 spring.thymeleaf.cache=true
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/db_wic
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${JDBC_URL}
+spring.datasource.username=${JDBC_USERNAME}
+spring.datasource.password=${JDBC_PASSWORD}
 spring.datasource.driverclassName=org.mariadb.jdbc.Driver
+
+spring.jpa.generate-ddl=true
+
+# possible values: none, validate, update, create, create-drop
+spring.jpa.hibernate.ddl-auto=create
