update config and docker compose file with mariadb

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,6 +4,7 @@ spring.datasource.url=${JDBC_URL}
 spring.datasource.username=${JDBC_USERNAME}
 spring.datasource.password=${JDBC_PASSWORD}
 spring.datasource.driverclassName=org.mariadb.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.generate-ddl=true
 
