--- a/src/docker/docker-compose/mariadb/docker-compose.yml
+++ b/src/docker/docker-compose/mariadb/docker-compose.yml
@@ -5,17 +5,20 @@ mariadb:
   ports:
     - "3306:3306"
   environment:
+   - MYSQL_DATABASE=fredbetdb
    - MYSQL_ROOT_PASSWORD=secred
+   - MYSQL_USER=fred
+   - MYSQL_PASSWORD=fred
 
 fredbet:
   image: fred4jupiter/fredbet
   links:
-    - mariadb
+    - mariadb:mariadb
   ports:
     - "8080:8080"
   environment:
    - spring.profiles.active=test
    - JDBC_URL=jdbc:mariadb://mariadb:3306/fredbetdb
-   - JDBC_USERNAME=root
-   - JDBC_PASSWORD=secred
+   - JDBC_USERNAME=fred
+   - JDBC_PASSWORD=fred
    
