--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,4 +9,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 
 # possible values: none, validate, update, create, create-drop
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
