--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,10 +9,12 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 
 # possible values: none, validate, update, create, create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.h2.console.enabled=true
 
 # connect in console (http://localhost:8080/console) with jdbcUrl: jdbc:h2:mem:testdb
 
 shell.ssh.enabled=false
+
+flyway.enabled=false
