--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -7,6 +7,7 @@ spring.datasource.driverclassName=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
 
 # possible values: none, validate, update, create, create-drop
 spring.jpa.hibernate.ddl-auto=validate
