--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,7 +6,7 @@ spring.datasource.password=${JDBC_PASSWORD}
 spring.datasource.driverclassName=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 
 # possible values: none, validate, update, create, create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
