--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
+			<version>1.3.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
