--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -1,8 +1,8 @@
 spring.thymeleaf.cache=true
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/fredbetdb
-spring.datasource.username=fred
-spring.datasource.password=fred
+spring.datasource.username=fredbet
+spring.datasource.password=fredbet
 spring.datasource.driverclassName=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
