using default implementation of remember me functionality

--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -1,4 +1,4 @@
-spring.thymeleaf.cache=true
+spring.thymeleaf.cache=false
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/fredbetdb
 spring.datasource.username=fredbet
