--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,12 +4,13 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALS
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverclassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
 
 # possible values: none, validate, update, create, create-drop
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.h2.console.enabled=true
 
@@ -17,4 +18,4 @@ spring.h2.console.enabled=true
 
 shell.ssh.enabled=false
 
-flyway.enabled=false
+flyway.enabled=true
