update connection pool settings

--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -1,10 +1,8 @@
 spring.thymeleaf.cache=false
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/fredbetdb
-spring.datasource.username=fredbet
-spring.datasource.password=fredbet
-spring.datasource.driverclassName=org.mariadb.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+fredbet.db.url=jdbc:mariadb://localhost:3306/fredbetdb
+fredbet.db.username=fredbet
+fredbet.db.password=fredbet
 
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
