--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,8 @@
 spring.thymeleaf.cache=true
 
-spring.datasource.url=${JDBC_URL}
-spring.datasource.username=${JDBC_USERNAME}
-spring.datasource.password=${JDBC_PASSWORD}
-spring.datasource.driverclassName=org.mariadb.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+fredbet.db.url=${JDBC_URL}
+fredbet.db.username=${JDBC_USERNAME}
+fredbet.db.password=${JDBC_PASSWORD}
 
 spring.jpa.generate-ddl=false
 
