--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,8 @@
 spring.thymeleaf.cache=false
 
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driverclassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+fredbet.db.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+fredbet.db.username=sa
+fredbet.db.password=
 
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
