cleanup; update readme; bugfix startup on empty profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 management.context-path=/manage
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# by default the dev profile is active
+spring.profiles.active=dev
