--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # by default the dev profile is active
 spring.profiles.active=dev
+
+# Session timeout in seconds. For testing
+# server.session.timeout=1
