show favorite country in points statistics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,8 @@ spring.profiles.active=dev
 # You can enable/disable this param by JVM dynamic parameter: -Denable.demodata.creation=false
 enable.demodata.creation=true
 
+# Sum points per user for this country and show in points statistics
+favorite.country=GERMANY
+
 # Session timeout in seconds. For testing
 # server.session.timeout=1
