externalize configuration properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,5 @@
 spring.thymeleaf.cache=false
 
-fredbet.db.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-fredbet.db.username=sa
-fredbet.db.password=
-
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 
@@ -14,6 +10,10 @@ spring.h2.console.enabled=true
 
 # connect in console (http://localhost:8080/console) with jdbcUrl: jdbc:h2:mem:testdb
 
-shell.ssh.enabled=false
-
 flyway.enabled=true
+
+fredbet.create-demo-data=true
+
+fredbet.database-url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+fredbet.database-username=sa
+fredbet.database-password=
