--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,10 +1,10 @@
 spring.thymeleaf.cache=true
 
-fredbet.db.url=${JDBC_URL}
-fredbet.db.username=${JDBC_USERNAME}
-fredbet.db.password=${JDBC_PASSWORD}
-
 spring.jpa.generate-ddl=false
 
 # possible values: none, validate, update, create, create-drop
 spring.jpa.hibernate.ddl-auto=validate
+
+fredbet.database-url=${JDBC_URL}
+fredbet.database-username=${JDBC_USERNAME}
+fredbet.database-password=${JDBC_PASSWORD}
