--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -1,11 +1,11 @@
 spring.thymeleaf.cache=false
 
-fredbet.db.url=jdbc:mariadb://localhost:3306/fredbetdb
-fredbet.db.username=fredbet
-fredbet.db.password=fredbet
-
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 
 # possible values: none, validate, update, create, create-drop
 spring.jpa.hibernate.ddl-auto=validate
+
+fredbet.database-url=jdbc:mariadb://localhost:3306/fredbetdb
+fredbet.database-username=fredbet
+fredbet.database-password=fredbet
