--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # by default the dev profile is active
 spring.profiles.active=dev
 
-# Adds or removes the navigation entry for demo data creation in administraion menu
-# You can enable/disable this param by JVM dynamic parameter: -Denable.demodata.creation=false
-enable.demodata.creation=true
-
-# Sum points per user for this country and show in points statistics
-favorite.country=GERMANY
-
 # Session timeout in seconds. For testing
 # server.session.timeout=1
+
+fredbet.enable-demo-data-creation-navigation-entry=true
+
+fredbet.favourite-country=germany
