--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<exclusions>
 				<exclusion>
@@ -116,12 +121,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
-
-		<!-- Example for login: ssh -p 2000 admin@<HOSTNAME> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.springframework.boot</groupId> -->
-		<!-- <artifactId>spring-boot-starter-remote-shell</artifactId> -->
-		<!-- </dependency> -->
+		
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
@@ -210,6 +210,7 @@
 			<version>2.0.0.0</version>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -287,7 +288,7 @@
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>0.4.13</version>
 				<configuration>
-<!-- 					<serverId>docker-hub</serverId> -->
+					<!-- <serverId>docker-hub</serverId> -->
 					<imageName>hamsterhase/fredbet:latest</imageName>
 					<dockerDirectory>${project.build.directory}/docker</dockerDirectory>
 					<resources>
