--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+spring.thymeleaf.cache=true
+
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+flyway.enabled=true
+
+# possible values: none, validate, update, create, create-drop
+spring.jpa.hibernate.ddl-auto=validate
+
 # for actuator
 management.context-path=/manage
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # by default the dev profile is active
 spring.profiles.active=dev
@@ -9,6 +18,9 @@ spring.profiles.active=dev
 # Session timeout in seconds. For testing
 # server.session.timeout=1
 
-fredbet.enable-demo-data-creation-navigation-entry=true
-
+fredbet.create-demo-data=false
+fredbet.enable-demo-data-creation-navigation-entry=false
 fredbet.favourite-country=germany
+fredbet.database-url=jdbc:mariadb://localhost:3306/fredbetdb
+fredbet.database-username=fredbet
+fredbet.database-password=fredbet
