--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,19 +1,10 @@
+# override properties of defaults settings in application.properties here
 spring.thymeleaf.cache=false
 
-spring.jpa.generate-ddl=false
-spring.jpa.show-sql=false
-
-# possible values: none, validate, update, create, create-drop
-spring.jpa.hibernate.ddl-auto=validate
-
+# connect in console (http://localhost:8080/console) with jdbcUrl: jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 
-# connect in console (http://localhost:8080/console) with jdbcUrl: jdbc:h2:mem:testdb
-
-flyway.enabled=true
-
 fredbet.create-demo-data=true
-
 fredbet.database-url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 fredbet.database-username=sa
 fredbet.database-password=
