update docker-compose file

--- a/src/docker/docker-compose/mariadb/docker-compose.yml
+++ b/src/docker/docker-compose/mariadb/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       ports:
         - "8080:8080"
       environment:
-       - spring.profiles.active=docker
-       - JDBC_URL=jdbc:mariadb://mariadb:3306/fredbetdb
-       - JDBC_USERNAME=fred
-       - JDBC_PASSWORD=fred
+       - spring.profiles.active=prod
+       - FREDBET_DATABASE-URL=jdbc:mariadb://mariadb:3306/fredbetdb
+       - FREDBET_DATABASE-USERNAME=fred
+       - FREDBET_DATABASE-PASSWORD=fred
