added image resize service

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.8</version>
+		</dependency>
 
 		<!-- for form validation -->
 		<!-- <dependency> -->
