update image gallery

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,8 @@ spring.profiles.active=dev
 # Session timeout in seconds. For testing
 # server.session.timeout=1
 
+spring.http.multipart.max-file-size=10Mb
+
 fredbet.create-demo-data=false
 fredbet.enable-demo-data-creation-navigation-entry=false
 fredbet.favourite-country=germany
