make sizes configurable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,13 @@ spring.profiles.active=dev
 
 spring.http.multipart.max-file-size=10Mb
 
+# application specific properties
 fredbet.create-demo-data=false
 fredbet.enable-demo-data-creation-navigation-entry=false
 fredbet.favourite-country=germany
 fredbet.database-url=jdbc:mariadb://localhost:3306/fredbetdb
 fredbet.database-username=fredbet
 fredbet.database-password=fredbet
+
+fredbet.image-size=1920
+fredbet.thumbnail-size=75
