download all images as zip file

--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
 			<artifactId>thumbnailator</artifactId>
 			<version>0.4.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.12</version>
+		</dependency>
 
 		<!-- for form validation -->
 		<!-- <dependency> -->
